--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/game.js",
       "dest": "/public/game.js"
     },
