--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,24 @@
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "/server.js"
+      "dest": "server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
+      }
     },
     {
-      "handle": "filesystem"
+      "src": "/game.js",
+      "dest": "/public/game.js"
+    },
+    {
+      "src": "/styles.css",
+      "dest": "/public/styles.css"
     },
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/public/index.html"
     }
   ]
 }
