--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,15 @@
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "/server.js"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
     }
   ]
 }
