--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "public/game.js"
+      "dest": "public/$1"
     },
     {
       "src": "/(.*)",
