--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/socket.io/(.*)",
-      "dest": "index.js"
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*).(js|css|html)",
+      "dest": "/public/$1.$2"
     },
     {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "server.js"
     }
   ]
 }
