--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -12,7 +16,7 @@
       "dest": "server.js"
     },
     {
-      "src": "/(.*).(js|css|html)",
+      "src": "/(.+\\.[a-zA-Z]+)$",
       "dest": "/public/$1"
     },
     {
