--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "server.js"
     },
     {
+      "src": "/health",
+      "dest": "server.js"
+    },
+    {
       "handle": "filesystem"
     },
     {
@@ -26,5 +30,8 @@
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
